--- a/css/main.css
+++ b/css/main.css
@@ -1299,4 +1299,189 @@ h1 {
     color: var(--color-white);
     margin-bottom: 24px;
   }
+}
+.preferences {
+  padding-bottom: 20px;
+}
+
+.preferences__cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 8px;
+}
+
+.preferences__title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 24px;
+  color: var(--1);
+  margin-bottom: 16px;
+}
+
+.preferences__card {
+  border-radius: 16px;
+  background: var(--light-grey);
+  padding: 16px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.promotions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.promotions__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 8px;
+  margin-bottom: 12px;
+}
+.promotions__title > span {
+  font-weight: 700;
+  font-size: 20px;
+  color: var(--1);
+}
+
+.promotions__description {
+  color: var(--07);
+}
+
+.preferences__card-action {
+  background-color: #fff;
+}
+
+.apply {
+  display: none;
+  border: 1px solid var(--prime);
+  border-radius: 8px;
+  padding: 17px 60px;
+  background: transparent;
+}
+
+.promotions__title > span {
+  font-weight: 700;
+  font-size: 24px;
+  color: var(--1);
+}
+
+.tabled__img,
+.none-card {
+  display: none;
+}
+
+.promotions {
+  margin-right: auto;
+}
+
+@media (min-width: 768px) {
+  .preferences__card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    gap: 26px;
+  }
+  .promotions__title > img {
+    display: none;
+  }
+  .apply {
+    display: block;
+  }
+  .tabled__img {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+.apply {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 18px;
+  color: var(--prime);
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.apply:hover {
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
+}
+
+@media (min-width: 1100px) {
+  .preferences__cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+  .preferences__card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  .preferences__card:nth-child(1) {
+    background: -webkit-gradient(linear, left top, left bottom, from(#fe94a6), to(#f2f2f2));
+    background: linear-gradient(180deg, #fe94a6 0%, #f2f2f2 100%);
+  }
+  .preferences__card:nth-child(1) > .preferences__card-action {
+    background: transparent;
+  }
+  .preferences__card:nth-child(2) {
+    background: -webkit-gradient(linear, left top, left bottom, from(#e685ff), to(#f2f2f2));
+    background: linear-gradient(180deg, #e685ff 0%, #f2f2f2 100%);
+  }
+  .preferences__card:nth-child(2) > .preferences__card-action {
+    background: transparent;
+  }
+  .preferences__card:nth-child(3) {
+    background: -webkit-gradient(linear, left top, left bottom, from(#7de9ff), to(#f2f2f2));
+    background: linear-gradient(180deg, #7de9ff 0%, #f2f2f2 100%);
+  }
+  .preferences__card:nth-child(3) > .preferences__card-action {
+    background: transparent;
+  }
+  .preferences__card:nth-child(4) {
+    background: -webkit-gradient(linear, left top, left bottom, from(#ffe685), to(#f6f6f6));
+    background: linear-gradient(180deg, #ffe685 0%, #f6f6f6 100%);
+  }
+  .preferences__card:nth-child(4) > .preferences__card-action {
+    background: transparent;
+  }
+  .preferences__card:nth-child(5) {
+    background: -webkit-gradient(linear, left top, left bottom, from(#adffc1), to(#f2f2f2));
+    background: linear-gradient(180deg, #adffc1 0%, #f2f2f2 100%);
+  }
+  .preferences__card:nth-child(5) > .preferences__card-action {
+    background: transparent;
+  }
+  .text-center {
+    margin: 0 auto;
+    margin-bottom: 16px;
+  }
+}
+.preferences__card:hover {
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
 }/*# sourceMappingURL=main.css.map */
