--- a/css/main.css
+++ b/css/main.css
@@ -1635,4 +1635,295 @@ h1 {
     background-color: var(--light-grey);
     padding: 55px 0;
   }
+}
+.footer__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-column-gap: 30px;
+     -moz-column-gap: 30px;
+          column-gap: 30px;
+  margin-bottom: 50px;
+}
+
+.footer__data {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.footer__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 16px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 4px;
+}
+
+.foore__top-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: start;
+  font-size: 14px;
+  color: var(--05);
+}
+
+.footer__top-description {
+  font-size: 11px;
+  text-align: center;
+  color: var(--03);
+}
+
+.footer__menu-list,
+.footer__category-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 8px;
+  margin-top: 24px;
+}
+.footer__menu-listli,
+.footer__category-listli {
+  color: var(--1);
+}
+
+.footer__contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 4px;
+  margin-top: 16px;
+}
+
+.footer__contact-phone {
+  font-weight: 500;
+  font-size: 24px;
+  color: var(--1);
+}
+
+.footer__contact-center {
+  font-size: 12px;
+  color: var(--06);
+  max-width: 170px;
+}
+
+.footer__contact-call {
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--prime);
+}
+
+.footer__contact-icons {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.footer__address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 8px;
+}
+
+.footer__address-link {
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--1);
+}
+
+.footer__addresss {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .footer__menu-list,
+  .footer__category-list,
+  .footer__contact,
+  .footer__address {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .footer__contact-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-right: auto;
+    gap: 8px;
+  }
+}
+.footer__top,
+.foore__top-text {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  text-align: start;
+  margin-right: auto;
+}
+
+@media (min-width: 992px) {
+  .footer__block {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 40px 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    margin-bottom: 0;
+  }
+  .footer__top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: start;
+  }
+  .footer__top > img {
+    width: 39px;
+    height: 45px;
+  }
+  .footer__top-description {
+    text-align: start;
+  }
+  .footer__menu-list,
+  .footer__category-list,
+  .footer__contact,
+  .footer__address {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer__address {
+    display: none;
+  }
+  .footer__addresss {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+.stiky__nav {
+  position: fixed;
+  z-index: 99999;
+  bottom: 0;
+  width: 100%;
+  height: 48px;
+  -webkit-box-shadow: 0 -4px 8px 0 rgba(0, 0, 0, 0.05);
+          box-shadow: 0 -4px 8px 0 rgba(0, 0, 0, 0.05);
+  background: #fff;
+}
+
+@media (min-width: 992px) {
+  .stiky__nav {
+    display: none;
+  }
+}
+.stiky__nav-list {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.stiky__nav-link a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 65px;
+}
+
+.stiky__nav-link svg {
+  width: 24px;
+  height: 24px;
+}
+
+.stiky__nav-link span {
+  font-size: 13px;
+  color: var(--prime);
+}
+
+@media (min-width: 768px) {
+  .stiky__nav-link > a > svg {
+    width: 32px;
+    height: 32px;
+  }
+  .stiky__nav-link a span {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 20px;
+    color: var(--09);
+  }
+  .stiky__nav-link a {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    max-width: -webkit-fit-content;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+  }
+  .stiky__nav-link a > svg {
+    width: 32px;
+    height: 32px;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
 }/*# sourceMappingURL=main.css.map */
