--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,5 @@
 @import "./layout/details";
 @import "./layout/preferences";
 @import "./layout/subscribe";
+@import "./layout/footer";
+@import "./layout/stiky-nav";
